--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
 
 <body>
 
-<p><h3><font color="red"><h2>TITLE</h2></font>Limbo and Roland Barthes' "reality effect"</h3></p>
+<p><h3><font color="red"><h2>TITLE</h2></font>Plants vs Zombie</h3></p>
 
-<p><font color="red"><h2>THESIS STATEMENT</h2></font>Barthes curiously discusses the "reality effect" as an effect when we unconsciously perceive
-some tiny unnecessary detail in a work of fiction. I would like to apply his notion
-to the video game Limbo. Take a look at the very opening of the game:</p>
+<p><font color="red"><h2>INTRODUCTION and THESIS STATEMENT</h2></font>Plants vs Zombie was released on May 5, 2009. This game is about having your plants to attack the zombies, so that they don't enter the house. In this
+game, you must survive a horde of zombies in each wave with various of plants as defence. Anzieu discussed about the death drive and the life drive. Lindley discussed about overcoming obstacles</p>
 
 <font color="red"><h2>MEDIA EXAMPLE</h2></font><video width="320" height="240" controls poster="http://www.davidbardschwarz.com/images/screen-limbo.png">
 <source src="http://www.davidbardschwarz.com/videos/beg-limbo.mp4" type="video/mp4">
 </video>
-<p><font color="red"><h2>COMMENT</h2></font>You'd never consciously notice it, but look again at the very brightest portion of the background! See that shape
-that descends? This is precisely what Barthes is after--a detail that makes us find an obvious representation "real."</p><p>
-Barthes describes such images as follows: <font color="red"><h2>QUOTE FROM THE READINGS</h2></font>"the singularity of the descriptive (or of the 'useless detail') in the
-narrative fabric, its isolatedness, brings up a question of primary importance for the structural analysis of narrative" <font color="red"><h2>CITATION</h2></font><font color=green>(Barthes, "The Reality Effect" p. 12).</font>
+<p><font color="red"><h2>COMMENT</h2></font>In this video, you see a zombie walking in the house and starts eating the the person inside the house. Once the zombie enters the house, you can hear a horror piano vibe and 
+you can hear the scream at the end. That is the death drive. For me, I do not want to keep on hearing that sound and the screaming. For me to avoid that. I need to beat that level. At the same time, if I beat the
+level I feel joy that I beat the level and give me joy.</p><p>
+Barthes describes such images as follows: <font color="red"><h2>QUOTE FROM THE READINGS</h2></font>Anzieu- "the result is a defusing of the drives, freeing the death drives and giving them economic pedominance over the
+life drive."
+Lindley- "triumphing over obstacles, the joy is success, victory."<font color="red"><h2>CITATION</h2></font><font color=green>(Barthes, "The Reality Effect" p. 12).</font>
 
 </body>
 </html>
