--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p><h3><font color="red"><h2>TITLE</h2></font>Plants vs Zombie</h3></p>
 
 <p><font color="green"><h2>INTRODUCTION and THESIS STATEMENT</h2></font>Plants vs Zombie was released on May 5, 2009. This game is about having your plants to attack the zombies, so that they don't enter the house. In this
-game, you must survive a horde of zombies in each wave with various of plants as defence. Anzieu discussed about the death drive and the life drive. Lindley discussed about overcoming obstacles</p>
+game, you must survive a horde of zombies in each wave with various of plants as defence. The game represent the importance of life and death drive and the imporatance of feeling the joy of success.</p>
 
 <font color="green"><h2>MEDIA EXAMPLE</h2></font><video width="320" height="240" controls poster="http://www.davidbardschwarz.com/images/screen-limbo.png">
 <source src="http://www.davidbardschwarz.com/videos/beg-limbo.mp4" type="video/mp4">
