--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<p><h3><font color="red"><h2>TITLE</h2></font>Plants vs Zombie</h3></p>
+<p><h3><font color="green"><h2>TITLE</h2></font>Plants vs Zombie</h3></p>
 
 <p><font color="green"><h2>INTRODUCTION and THESIS STATEMENT</h2></font>Plants vs Zombie was released on May 5, 2009. This game is about having your plants to attack the zombies, so that they don't enter the house. In this
 game, you must survive a horde of zombies in each wave with various of plants as defence. The game represent the importance of life and death drive and the imporatance of feeling the joy of success.</p>
@@ -18,9 +18,9 @@ game, you must survive a horde of zombies in each wave with various of plants as
 you can hear the scream at the end. That is the death drive. Death drive is when you keep on dying and you will also hear a horror sound vibe. For me, I do not want to keep on hearing that sound and the screaming. 
 For me to avoid that I need to beat that level. If I beat the game I am free from death drive. Life drive is when you are free from death drive. This is the part where you won't hear the horror sound and the scream.
 At the same time you feel the joyfulness that you were successful. Lindley was discussing about the joy of success.</p><p>
-Barthes describes such images as follows: <font color="red"><h2>QUOTE FROM THE READINGS</h2></font>Anzieu- "the result is a defusing of the drives, freeing the death drives and giving them economic pedominance over the
+Barthes describes such images as follows: <font color="green"><h2>QUOTE FROM THE READINGS</h2></font>Anzieu- "the result is a defusing of the drives, freeing the death drives and giving them economic pedominance over the
 life drive."
-Lindley- "triumphing over obstacles, the joy is success, victory."<font color="red"><h2>CITATION</h2></font><font color=green>(Barthes, "The Reality Effect" p. 12).</font>
+Lindley- "triumphing over obstacles, the joy is success, victory."<font color="green"><h2>CITATION</h2></font><font color=green>(Barthes, "The Reality Effect" p. 12).</font>
 
 </body>
 </html>
