--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ For me to avoid that I need to beat that level. If I beat the game I am free fro
 At the same time you feel the joyfulness that you were successful. Lindley was discussing about the joy of success.</p><p>
 Barthes describes such images as follows: <font color="green"><h2>QUOTE FROM THE READINGS</h2></font>Anzieu- "the result is a defusing of the drives, freeing the death drives and giving them economic pedominance over the
 life drive."
-Lindley- "triumphing over obstacles, the joy is success, victory."<font color="green"><h2>CITATION</h2></font><font color=green>(Didier, Anzieu, "The Sound Envelope in The Skin Ego", pg. 169)
-(Lindley, Ernest, "A Study of Puzzles with Special Reference to the Psychology of Mental Adaptation" in The American Journal of Psychology", pg. 433).</font>
+Lindley- "triumphing over obstacles, the joy is success, victory."<font color="green"><h2>CITATION</h2></font><font color=green>(Didier, Anzieu, "The Sound Envelope" in "he Skin Ego", pg. 169)
+(Lindley, Ernest, "A Study of Puzzles with Special Reference to the Psychology of Mental Adaptation" in "The American Journal of Psychology", pg. 433).</font>
 
 </body>
 </html>
