--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ game, you must survive a horde of zombies in each wave with various of plants as
 <source src="http://www.davidbardschwarz.com/videos/beg-limbo.mp4" type="video/mp4">
 </video>
 <p><font color="green"><h2>COMMENT</h2></font>In this video, you see a zombie walking in the house and starts eating the the person inside the house. Once the zombie enters the house, you can hear a horror piano vibe and 
-you can hear the scream at the end. That is the death drive. Death drive is when you keep on dying and you will also hear a horror sound vibe. For me, I do not want to keep on hearing that sound and the screaming. 
-For me to avoid that I need to beat that level. If I beat the game I am free from death drive. Life drive is when you are free from death drive. This is the part where you won't hear the horror sound and the scream.
+you can hear the scream at the end. That is the death drive. The death drive is the will to survive and avoiding death. For me, I do not want to keep on hearing that sound and the screaming. 
+For me to avoid that I need to beat that level. If I beat the game I am free from death drive. This is the part where you won't hear the horror sound and the scream.
 At the same time you feel the joyfulness that you were successful. Lindley was discussing about the joy of success.</p><p>
-Barthes describes such images as follows: <font color="green"><h2>QUOTE FROM THE READINGS</h2></font>Anzieu- "the result is a defusing of the drives, freeing the death drives and giving them economic pedominance over the
+<font color="green"><h2>QUOTE FROM THE READINGS</h2></font>Anzieu- "the result is a defusing of the drives, freeing the death drives and giving them economic pedominance over the
 life drive."
 Lindley- "triumphing over obstacles, the joy is success, victory."<font color="green"><h2>CITATION</h2></font><font color=green>(Didier, Anzieu, "The Sound Envelope" in "he Skin Ego", pg. 169)
 (Lindley, Ernest, "A Study of Puzzles with Special Reference to the Psychology of Mental Adaptation" in "The American Journal of Psychology", pg. 433).</font>
