--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <p><font color="green"><h2>INTRODUCTION and THESIS STATEMENT</h2></font>Plants vs Zombie was released on May 5, 2009. This game is about having your plants to attack the zombies, so that they don't enter the house. In this
 game, you must survive a horde of zombies in each wave with various of plants as defence. The game represent the importance of life and death drive and the imporatance of feeling the joy of success.</p>
 
-<font color="green"><h2>MEDIA EXAMPLE</h2></font><video width="320" height="240" controls poster="http://www.davidbardschwarz.com/images/screen-limbo.png">
-<source src="http://www.davidbardschwarz.com/videos/beg-limbo.mp4" type="video/mp4">
-</video>
+<font color="green"><h2>MEDIA EXAMPLE</h2></font>
+<a href="http://www.youtube.com/watch?feature=player_embedded&v=PXp8zK4LJJo
+" target="_blank"><img src="http://img.youtube.com/vi/PXp8zK4LJJo/0.jpg" 
+alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
+
 <p><font color="green"><h2>COMMENT</h2></font>In this video, you see a zombie walking in the house and starts eating the the person inside the house. Once the zombie enters the house, you can hear a horror piano vibe and 
 you can hear the scream at the end. That is the death drive. The death drive is the will to survive and avoiding death. For me, I do not want to keep on hearing that sound and the screaming. 
 For me to avoid that I need to beat that level. If I beat the game I am free from death drive. This is the part where you won't hear the horror sound and the scream.
